# none-shall-pass-rustic

./: .gitignore  Cargo.toml  README.md  gen_docs.sh  pre_commit.sh
.github/workflows/: rust.yml
docs/: index.html
src/: connection.rs  files.rs  git.rs  lib.rs  lookup.rs  main.rs  parser.rs  squire.rs
