# https://doc.rust-lang.org/cargo/getting-started/first-steps.html#first-steps-with-cargo
[package]
name = "none-shall-pass"
version = "0.0.5"
description = "GitHub Action to validate hyperlinks in all markdown files"
license = "MIT"
documentation = "https://thevickypedia.github.io/none-shall-pass-rustic"
homepage = "https://github.com/thevickypedia/none-shall-pass-rustic"
repository = "https://github.com/thevickypedia/none-shall-pass-rustic"

## For local debug purpose
## https://httpbin.org/
#[[bin]]
#name = "none"
#path = "src/main.rs"

[dependencies]
glob = "0.3"
log = "0.4.20"
regex = "1.10.2"
env_logger = "0.10"
reqwest = { version = "0.11.22", features = ["blocking"] }
