# https://doc.rust-lang.org/cargo/getting-started/first-steps.html#first-steps-with-cargo
[package]
name = "none-shall-pass"
version = "0.1.4"
description = "Artifact for GitHub Action to validate hyperlinks in all markdown files"
license = "MIT"
documentation = "https://thevickypedia.github.io/none-shall-pass"
homepage = "https://github.com/thevickypedia/none-shall-pass-rustic"
repository = "https://github.com/thevickypedia/none-shall-pass-rustic"

## For local debug purpose (this project is desinged to be used in GH Actions as an executable, not a library)
## https://httpbin.org/
#[[bin]]
#name = "none"
#path = "src/main.rs"

[dependencies]
glob = "0.3"
log = "0.4.20"
regex = "1.10.2"
env_logger = "0.11.2"
reqwest = { version = "0.11.22", features = ["blocking"] }
