# https://doc.rust-lang.org/cargo/getting-started/first-steps.html#first-steps-with-cargo
[package]
name = "none-shall-pass"
version = "0.1.8-a"
description = "Artifact for GitHub Action to validate hyperlinks in all markdown files"
license = "MIT"
rust-version = "1.78.0"
edition = "2021"
documentation = "https://thevickypedia.github.io/none-shall-pass"
homepage = "https://github.com/thevickypedia/none-shall-pass-rustic"
repository = "https://github.com/thevickypedia/none-shall-pass-rustic"
authors = ["Vignesh Rao"]

## For local debug purpose (this project is desinged to be used in GH Actions as an executable, not a library)
## https://httpbin.org/
#[[bin]]
#name = "none"
#path = "src/main.rs"

[dependencies]
glob = "0.3.1"
log = "0.4.21"
regex = "1.10.4"
env_logger = "0.11.3"
serde_json = "1.0.117"
serde = { version = "1.0.202", features = ["derive"] }
reqwest = { version = "0.12.4", features = ["blocking"] }
